--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <header class="app-header">
     <h1>Library Tracker</h1>
     <div class="controls">
-      <div class="search-wrap">
-        <input id="search-input" type="search" placeholder="Search books…" aria-label="Search books" />
-        <button id="btn-clear-search" class="icon small" aria-label="Clear search" title="Clear search" hidden>✕</button>
-        <span id="results-count" class="results-count" aria-live="polite"></span>
-      </div>
       <select id="sort-select" aria-label="Sort books" title="Sort">
         <option value="series" selected>Series (A–Z)</option>
         <option value="title">Title (A–Z)</option>
         <option value="author">Author (A–Z)</option>
         <option value="genre">Genre (A–Z)</option>
       </select>
+      <div class="search-wrap">
+        <input id="search-input" type="search" placeholder="Search books…" aria-label="Search books" />
+        <button id="btn-clear-search" class="icon small" aria-label="Clear search" title="Clear search" hidden>✕</button>
+        <span id="results-count" class="results-count" aria-live="polite"></span>
+      </div>
       <div class="isbn-inline" style="display:flex;gap:6px;align-items:center">
-        <input id="isbn-input" inputmode="numeric" pattern="[-0-9Xx ]+" placeholder="Enter ISBN…" aria-label="Enter ISBN" style="width:180px;padding:8px 10px;border-radius:8px;border:1px solid var(--border);background:#0e141f;color:var(--fg)" />
+        <input id="isbn-input" type="text" inputmode="numeric" pattern="[-0-9Xx ]+" placeholder="Enter ISBN…" aria-label="Enter ISBN" />
         <button id="btn-add" aria-label="Add ISBN">Add</button>
       </div>
       <button id="btn-scan" aria-label="Open scanner">Scan</button>
