--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
   <header class="app-header">
+  <!-- Firebase SDK (compat, for our legacy scripts) -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <script src="js/firebase-config.js" defer></script>
+  <script src="js/firebase-config.js"></script>
   <script src="js/firebase.js"></script>
 
     <h1>Library Tracker</h1>
