--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.gstatic.com https://apis.google.com https://cdn.jsdelivr.net; connect-src 'self' https://openlibrary.org https://www.googleapis.com https://firestore.googleapis.com https://www.gstatic.com https://cdn.jsdelivr.net https://securetoken.google.com https://identitytoolkit.googleapis.com https://apis.google.com; img-src 'self' https: data:; style-src 'self' 'unsafe-inline'; font-src 'self' data:; media-src 'self' blob: data:; worker-src 'self'; frame-src https://accounts.google.com https://apis.google.com; base-uri 'self'; upgrade-insecure-requests">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.gstatic.com https://apis.google.com https://accounts.google.com https://cdn.jsdelivr.net; connect-src 'self' https://openlibrary.org https://www.googleapis.com https://firestore.googleapis.com https://www.gstatic.com https://cdn.jsdelivr.net https://securetoken.google.com https://identitytoolkit.googleapis.com https://apis.google.com; img-src 'self' https: data:; style-src 'self' 'unsafe-inline'; font-src 'self' data:; media-src 'self' blob: data:; worker-src 'self'; frame-src https://accounts.google.com https://apis.google.com; base-uri 'self'; upgrade-insecure-requests">
   <title>Library Tracker</title>
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
   <link rel="manifest" href="./manifest.json" />
