Auth persistence: avoid forced signed-out on load, use LOCAL/SESSION based on protocol; Theme: persist across sign-in/out by mirroring cloud->local; Remove default signed-out class in index.html; minor cleanup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="styles/modal.css" />
   <link rel="stylesheet" href="styles/handsfree.css" />
 </head>
-<body class="signed-out">
+<body>
   <!-- Firebase (compat) SDKs in head with defer to ensure availability before app runs -->
   <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
