UI: Add tip to Voice info modal – 'To see these instructions again, just say “voice info”'.

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
         <li>Closing: “close”, “dismiss”, or “cancel”</li>
         <li>Clear filters: “clear”</li>
       </ul>
+      <p class="muted"><em>Tip:</em> To see these instructions again, just say “voice info”.</p>
     </div>
   </div>
 
