Fix live login issues: remove inline manifest (CSP-safe), register SW only on https/localhost, robust Firebase Auth persistence (LOCAL→SESSION→NONE), guard sign-in on insecure origins; bump SW cache to v7

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li>Move hand to move the on‑screen cursor</li>
             <li>Pinch + brief hold = click</li>
             <li>Hover briefly to highlight buttons</li>
-            <li>Settings → Hands-Free: adjust sensitivity, mirror X, dwell</li>
+            <li>Settings → Hands-Free: adjust cursor & pinch sensitivity, mirror X</li>
           </ul>
         </div>
       </button>
