Settings tips: add cursor/pinch sensitivity and voice delay tips in info popups; Defaults: cursor 40%, pinch 90%

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <li>Move hand to move the on‑screen cursor</li>
             <li>Pinch + brief hold = click</li>
             <li>Hover briefly to highlight buttons</li>
-            <li>Settings → Hands-Free: adjust cursor & pinch sensitivity, mirror X</li>
+            <li>Settings → Hands‑Free: adjust cursor and pinch sensitivity, and mirror X</li>
+            <li class="muted">Tip: You can fine‑tune cursor sensitivity and pinch sensitivity in Settings → Hands‑Free.</li>
           </ul>
         </div>
       </button>
@@ -69,6 +70,7 @@
             <li>Pagination: “next page”, “previous page”</li>
             <li>Closing: “close”, “dismiss”, or “cancel”</li>
             <li>Clear filters: “clear”</li>
+            <li class="muted">Tip: You can adjust the command processing delay in Settings → Voice.</li>
           </ul>
         </div>
       </button>
