Info modals: add tips for cursor/pinch sensitivity (Hands‑Free) and voice command delay (Voice)

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         <li>Move your hand to move the on‑screen cursor.</li>
         <li>Pinch your thumb and index finger, and hold briefly to click.</li>
         <li>Hover briefly over buttons to highlight them.</li>
-        <li>Open Settings → Hands-Free to adjust sensitivity, mirror X, and dwell time.</li>
+        <li>Open Settings → Hands‑Free to adjust sensitivity, mirror X, and dwell time.</li>
+        <li class="muted">Tip: You can fine‑tune cursor sensitivity and pinch sensitivity in Settings → Hands‑Free.</li>
       </ul>
     </div>
   </div>
@@ -153,7 +154,8 @@
         <li>Closing: “close”, “dismiss”, or “cancel”</li>
         <li>Clear filters: “clear”</li>
       </ul>
-      <p class="muted"><em>Tip:</em> To see these instructions again, just say “voice info”.</p>
+      <p class="muted"><em>Tip:</em> You can adjust the command processing delay in Settings → Voice.</p>
+      <p class="muted"><em>Also:</em> To see these instructions again, just say “voice info”.</p>
     </div>
   </div>
 
