Docs: update Voice info modal with new commands (return/borrow date, pagination variants, voice on/off, motion cursor)

--- a/index.html
+++ b/index.html
@@ -145,14 +145,17 @@
       <ul>
         <li>Finding: “Do I have Fourth Wing?” — opens the book or filters results</li>
         <li>Borrowing: “Lend Fourth Wing to Alex” — records a borrow today</li>
-        <li>Borrowing with date: “Alex started borrowing Fourth Wing last Tuesday”</li>
-        <li>Removing: “Remove Fourth Wing” — then say “yes” to confirm</li>
+        <li>Borrowing with date: “Alex is borrowing Fourth Wing on Nov 7” / “Alex borrowed Fourth Wing last Tuesday”</li>
+        <li>Return one: “return Fourth Wing for Alex” / “return Fourth Wing”</li>
         <li>Who’s borrowing: “Who’s borrowing Fourth Wing?”</li>
         <li>Borrower’s books: “Which books is Alex borrowing?”</li>
-        <li>Returns: “Alex returned the books they borrowed on November 12th”</li>
-        <li>Pagination: “next page”, “previous page”</li>
-        <li>Closing: “close”, “dismiss”, or “cancel”</li>
-        <li>Clear filters: “clear”</li>
+        <li>Remove a book: “Remove Fourth Wing” — then say “yes” to confirm</li>
+        <li>Pagination: “next page”, “previous page”, or simply “next”, “prev”, “back”</li>
+        <li>Close overlays: “close”, “dismiss”, or “cancel”</li>
+        <li>Clear search: “clear”</li>
+        <li>Turn off voice: “voice off”, “disable voice”, “turn off voice”</li>
+        <li>Turn on voice: “voice on” (only works if the mic is already listening)</li>
+        <li>Motion cursor: “enable motion cursor” / “motion cursor on” (or “disable … / off”)</li>
       </ul>
       <p class="muted"><em>Tip:</em> You can adjust the command processing delay in Settings → Voice.</p>
       <p class="muted"><em>Also:</em> To see these instructions again, just say “voice info”.</p>
